<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="Title_str">My Nano Apps</string>
    <string name="action_settings">Settings</string>
    <string name="Spotify_Streamer">Spotify Streamer</string>
    <string name="Football_Scores">Football Scores</string>
    <string name="Library_App">Library App</string>
    <string name="Build_It_Bigger">Build It Bigger</string>
    <string name="XYZ_Reader">XYZ Reader</string>
    <string name="Capstone">Capstone</string>
</resources>
