<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#fff834">

    <TextView android:text="@string/Title_str" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Spotify_Streamer"
        android:id="@+id/button"
        android:layout_marginTop="33dp"
        android:background="#ff9f21"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:onClick="sendMessage" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Football_Scores"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:onClick="sendMessage" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Library_App"
        android:id="@+id/button6"
        android:layout_marginStart="30dp"
        android:layout_below="@+id/button"
        android:layout_toEndOf="@+id/button2"
        android:onClick="sendMessage" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Build_It_Bigger"
        android:id="@+id/button3"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button2"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignStart="@+id/button"
        android:onClick="sendMessage"
        android:background="#ff9f21" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/XYZ_Reader"
        android:id="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/button3"
        android:layout_alignEnd="@+id/button"
        android:onClick="sendMessage"
        android:layout_alignStart="@+id/button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Capstone"
        android:id="@+id/button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:layout_alignEnd="@+id/button"
        android:layout_alignStart="@+id/button4"
        android:onClick="sendMessage"
        android:background="#ff9f21"/>

</RelativeLayout>
